--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "needle": "^2.0.0",
+    "node-localstorage": "^1.3.1",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "twit": "^2.2.9"
